@@ -13,6 +13,7 @@ Core - General
 - Fix minor javascript error (error checking).
 - Fix problems where If assign was passed to a {content} tag, do not pass it to the module on a mact request.
 - Change prototype to CMSModule::DoActionBase to pass in the current template object.
+- Implements the completely forgotten 403 exception stuff and the IsPermitted content method.
 
 CMSContentManager v1.0.1
 - Fixes for changing content types.
